--- a/XMLProject/web/css/style.css
+++ b/XMLProject/web/css/style.css
@@ -1,11 +1,5 @@
-/* Getting the new tags to behave */
-article, aside, audio, canvas, command, datalist, details, embed, figcaption, figure, footer, header, hgroup, keygen, meter, nav, output, progress, section, source, video {
-    display:block;
-}
-mark, rp, rt, ruby, summary, time {
-    display:inline
-}
-/* Left & Right alignment */
+
+
 .left {
     float:left
 }
@@ -19,7 +13,7 @@ mark, rp, rt, ruby, summary, time {
 .relative {
     position:relative
 }
-/* Global properties */
+
 body {	
     border:0;
     font:14px monospace;
@@ -40,28 +34,9 @@ body {
     padding-top: 15px;
 }
 
-.ic, .ic a {
-    border:0;
-    float:right;
-    background:#fff;
-    color:#f00;
-    width:50%;
-    line-height:10px;
-    font-size:10px;
-    margin:-220% 0 0 0;
-    overflow:hidden;
-    padding:0
-}
-.css3 {
-    border-radius:8px;
-    -moz-border-radius:8px;
-    -webkit-border-radius:8px;
-    box-shadow:0 0 4px rgba(0, 0, 0, .4);
-    -moz-box-shadow:0 0 4px rgba(0, 0, 0, .4);
-    -webkit-box-shadow:0 0 4px rgba(0, 0, 0, .4);
-    position:relative
-}
-/* Global Structure */
+
+
+
 .main {
     margin:0 auto;
     width:916px;
@@ -72,23 +47,12 @@ body {
     display: inline-block;
 }
 
-#b-left-panel {
-    width:180px;
-}
+
 
 .body1 {
     background:url(Image/bg_main.jpg) 0 0  repeat;
 }
-.body2 {
-    background:url(../images/bg_top_repeat.jpg) top repeat-x
-}
-.body3 {
-    background:url(../images/bg_top_img.jpg) top center no-repeat
-}
-.body4 {
-    background:url(../images/bg_content.gif) top repeat-x #363636
-}
-/* main layout */
+
 a {
     color:#13c5ff;
     text-decoration:underline;
@@ -114,7 +78,7 @@ h2 span {
 p {
     padding-bottom:20px
 }
-/* header */
+
 header {
     height:645px
 }
@@ -125,29 +89,7 @@ header {
     height:94px;
     text-indent:-9999px
 }
-#search {
-    float:right;
-    padding:41px 20px 0 0;
-    width:600px
-}
-#search .input {
-    float:right;
-    width:148px;
-    padding:5px 8px;
-    font:14px Arial, Helvetica, sans-serif;
-    background:#fff;
-    color:#999;
-    height:16px
-}
-#search .submit {
-    display:block;
-    cursor:pointer;
-    background:url(../images/search.gif) 0 0 no-repeat;
-    width:26px;
-    height:26px;
-    float:right;
-    margin-left:4px
-}
+
 
 .menu_nav {
     margin:0 0 10px;
@@ -258,10 +200,8 @@ ul.leftPanel li, ul.ex_menu li {
 ul.leftPanel li {
     padding:2px 0 2px 15px;
 }
-ul.ex_menu li {
-    padding:2px 0 2px 15px;
-}
-ul.leftPanel li a, ul.ex_menu li a {
+
+ul.leftPanel li a {
     display:block;
     color: #333333;
     text-decoration:none;
@@ -271,7 +211,7 @@ ul.leftPanel li a, ul.ex_menu li a {
     padding-left:15px;
     text-align: left;
 }
-ul.leftPanel li a:hover, ul.ex_menu li a:hover{
+ul.leftPanel li a:hover{
     color:#FFF;
     background:#C8DAE6;
 }
@@ -282,28 +222,6 @@ ul.leftPanel li.active a {
 }
 
 ul.leftPanel li a:hover {
-    text-decoration:none;
-}
-
-ul.ex_menu li {
-    padding:2px 0 2px 15px;
-}
-ul.content_menu li a, ul.ex_menu li a {
-    display:block;
-    color: #333333;
-    text-decoration:none;
-    padding:5px;
-    margin-left:-15px;
-    padding-left:15px;
-}
-ul.content_menu li a:hover, ul.ex_menu li a:hover, ul.leftPanel li.active a, ul.ex_menu li.active a {
-    color:#FFF;
-    background:#78bbe6;
-}
-ul.content_menu li a:hover {
-    text-decoration:none;
-}
-ul.ex_menu li a:hover {
     text-decoration:none;
 }
 
@@ -328,102 +246,6 @@ a {
     text-decoration: none;
 }
 
-.roundabout-holder {
-    height:5em;
-}
-.roundabout-moveable-item {
-    cursor:pointer;
-    width:636px;
-    height:478px;
-    margin-top:229px;
-    padding-bottom:20px
-}
-.roundabout-in-focus {
-    cursor:auto;
-}
-#gallery {
-    position:relative;
-    height:520px
-}
-#gallery img {
-    display:block;
-    width:100%;
-    height:100%
-}
-#gallery li {
-}
-/* content */
-#content {
-    padding-bottom:59px
-}
-#content2 {
-    padding-top:39px;
-    color:#fff;
-    padding-bottom:60px
-}
-#content2 h2 {
-    color:#fff
-}
-.pad_left1 {
-    padding-left:67px
-}
-.pad {
-    padding:0 10px
-}
-.pad_bot1 {
-    padding-bottom:14px
-}
-.pad_bot2 {
-    padding-bottom:6px
-}
-.marg_right1 {
-    margin-right:24px
-}
-.marg_left1 {
-    margin-left:-5px
-}
-
-.gadget {
-    margin:0;
-    padding:10px 15px 10px 0;
-}
-
-.clr {
-    clear:both;
-    padding:0;
-    margin:0;
-    width:100%;
-    font-size:0;
-    line-height:0;
-}
-
-
-
-.line1 {
-    background:url(../images/line_ver1.gif) 325px 0 repeat-y
-}
-.line2 {
-    background:url(../images/line_ver1.gif) 635px 0 repeat-y
-}
-#content2 .line2, #content2 .line1 {
-    background-image:url(../images/line_ver2.png)
-}
-.list1 {
-}
-.list1 li {
-    padding-bottom:20px;
-    padding-left:14px;
-    background:url(../images/marker_1.gif) 0 8px no-repeat
-}
-.list1 li a {
-    display:block;
-    font-weight:bold;
-    color:#0f0f0f;
-    text-decoration:none
-}
-.list1 li a:hover {
-    color:#13c5ff
-}
 .button {
     display:inline-block;
     color:#fff;
@@ -435,232 +257,6 @@ a {
 .button:hover {
     background:#373737
 }
-#content2 .button:hover {
-    background:#fff;
-    color:#373737
-}
-.link1 {
-    color:#0f0f0f;
-    font-weight:bold
-}
-#content2 .link1 {
-    color:#fff
-}
-.link2 {
-    text-decoration:none
-}
-.link2:hover {
-    color:#000
-}
-#content2 .link2:hover {
-    color:#fff
-}
-.date {
-    float:left;
-    width:46px;
-    margin-right:20px;
-    text-align:center;
-    font-size:30px;
-    color:#13c5ff;
-    line-height:1.2em;
-    padding-bottom:20px
-}
-.date span {
-    display:block;
-    font-size:53px;
-    line-height:1.2em;
-    margin-top:-8px;
-    margin-bottom:-22px;
-    letter-spacing:-2px
-}
-.color1 {
-    color:#13c5ff
-}
-/* tabs begin */
-.tabs {
-}
-.tabs ul.nav {
-    margin-top:-5px
-}
-.tabs ul.nav li {
-    line-height:30px
-}
-.tabs ul.nav li a {
-    color:#0f0f0f;
-    padding-left:16px;
-    background:url(../images/marker_1.gif) 2px 6px no-repeat
-}
-.tabs ul.nav li a:hover, .tabs ul.nav .selected a {
-    color:#13c5ff;
-    text-decoration:none
-}
-.tabs .content {
-}
-.tabs .tab-content {
-}
-/* tabs end */
-/* Lightbox image */
-.lightbox-image {
-    position:relative;
-    overflow:hidden;
-    display:block;
-    background:#fff
-}
-.lightbox-image img {
-    position:relative;
-    z-index:2
-}
-.lightbox-image span {
-    display:block;
-    position:absolute;
-    left:0;
-    top:0;
-    width:100%;
-    height:100%;
-    background:url(../images/magnify.png) no-repeat 50% 50%;
-    z-index:1
-}
-.pp_details {
-    display:none;
-    height:0;
-    padding:0;
-    margin:0;
-    font-size:0;
-    line-height:0
-}
-.pp_description {
-    display:none;
-    height:0;
-    padding:0;
-    margin:0;
-    font-size:0;
-    line-height:0
-}
-.gallery {
-    margin-top:-10px;
-    padding-left:8px;
-    width:100%;
-    overflow:hidden
-}
-.gallery li {
-    float:left;
-    padding-right:10px;
-    padding-top:10px
-}
-.gallery .end {
-    padding-right:0
-}
-/* footer */
-footer {
-    padding-top:43px;
-    font-size:12px;
-    color:#6b6b6b;
-    text-align:center;
-    min-height:45px;
-    padding-bottom:40px
-}
-footer a {
-}
-footer a:hover {
-}
-#icons {
-    float:right;
-    padding:7px 14px 0 0
-}
-#icons li {
-    padding-left:11px;
-    float:left
-}
-footer .left {
-    width:598px
-}
-/* Tooltips */
-.aToolTip {
-    border:1px solid #000;
-    background:url(../images/bg_opacity.png) repeat;
-    color:#fff;
-    margin:0;
-    padding:2px 10px;
-    font-size:11px
-}
-.aToolTip .aToolTipContent {
-    position:relative;
-    margin:0;
-    padding:0;
-}
-a.aToolTipCloseBtn {
-    display:block;
-    height:20px;
-    width:20px;
-    overflow:hidden;
-    background: no-repeat;
-    text-indent:-9999px;
-    outline:none;
-    position:absolute;
-    top:-15px;
-    right:-20px;
-}
-/* forms */
-#ContactForm {
-    padding:0 0 0 10px;
-    margin-top:-4px
-}
-#ContactForm span {
-    width:114px;
-    float:left;
-    font-weight:bold;
-    line-height:28px
-}
-#ContactForm .wrapper {
-    min-height:30px
-}
-#ContactForm .textarea_box {
-    width:100%;
-    overflow:hidden;
-    min-height:274px
-}
-#ContactForm {
-}
-#ContactForm {
-}
-#ContactForm a {
-    margin-right:10px;
-    float:left;
-    margin-top:5px
-}
-#ContactForm .input {
-    width:767px;
-    height:16px;
-    border:1px solid #d7d7d7;
-    background:#fff;
-    padding:5px;
-    color:#000;
-    font:14px Arial, Helvetica, sans-serif
-}
-#ContactForm textarea {
-    overflow:auto;
-    margin:0;
-    width:767px;
-    height:257px;
-    border:1px solid #d7d7d7;
-    background:#fff;
-    padding:5px;
-    color:#000;
-    font:14px Arial, Helvetica, sans-serif
-}
-.pure-form {
-    margin:0
-}
-.pure-form fieldset {
-    border:1px solid silver;
-    margin:0 2px;
-    padding:.35em .625em .75em
-}
-nav ul,nav ol {
-    list-style:none;
-    list-style-image:none
-}
-
 
 .onHide {
     display: none !important;
@@ -701,4 +297,20 @@ nav ul,nav ol {
 
 .category-form{
     width: 200px;
+}
+
+.categoryName{
+/*    width: 100px;*/
+/*    height: 26px;*/
+    
+    display: block;
+/*    background-color: rgb(217, 83, 45);*/
+    font-size: 20px;
+    font-weight: bold;
+    font-style: italic;
+/*    border-radius: 15px 15px 0px 0px;*/
+/*    border: 1px solid rgb(204, 204, 204);*/
+/*    border-radius: 0px 15px 15px 0px;*/
+    border-bottom: 2px solid #565d64;
+    padding-left: 30px;
 }
