--- a/trunk/XMLProject/web/css/style.css
+++ b/trunk/XMLProject/web/css/style.css
@@ -55,11 +55,7 @@ img {
     background:url(Image/bg_main.jpg) 0 0  repeat;
 }
 
-a {
-    color:#13c5ff;
-    text-decoration:underline;
-    outline:none
-}
+
 a:hover {
     text-decoration: underline;
     font-weight: bold;
@@ -94,23 +90,6 @@ header {
     text-indent:-9999px
 }
 
-
-.menu_nav {
-    margin:0 0 10px;
-    padding:0;
-}
-.menu_nav ul {
-    list-style:none;
-    margin:0;
-    padding:0;
-    float:right;
-}
-.menu_nav ul li {
-    margin:0;
-    padding:15px 5px 15px 0;
-    float:left;
-    background:url(images/menu_line.jpg) repeat-x top;
-}
 .menu-content ul li a {
     display:block;
     margin:0;
@@ -120,11 +99,6 @@ header {
     font-size:13px;
     line-height:16px;
 }
-.menu_nav ul li.active a, .menu_nav ul li a:hover {
-    color:#fff;
-    text-decoration:none;
-    background:#78bbe6;
-}
 
 .menu-content{
     font-size: larger;
@@ -132,7 +106,6 @@ header {
     text-decoration: none;
     list-style: none;
 }
-
 
 
 ul.menu-content li a span{
@@ -151,9 +124,11 @@ ul.menu-content li a span:hover{
     opacity: 0.8;
 }
 
-ul.menu-content li.active span{
-    color:#FFF;
-    background:#73C5DE;
+ul.menu-content li.active a{
+    color:#E27C63;
+    font-weight: bold;
+    font-size: 30px;
+/*    background:#73C5DE;*/
 
 }
 
@@ -175,14 +150,14 @@ ul.menu-content li a span:hover {
 #menu li a {
     display: block;
     font-size: 20px;
-    color: #fff;
+/*    color: #fff;*/
     text-decoration: none;
     padding-left: 20px;
     background-repeat: no-repeat;
     background-position: 0 6px;
 }
-#menu li a:hover, #menu #active a {
-    color:#13c5ff
+#menu li a:hover{
+/*    color:#73C5DE;*/
 }
 
 ul.content_menu li, ul.ex_menu li {
@@ -223,6 +198,7 @@ ul.leftPanel li a:hover{
 ul.leftPanel li.active a {
     background:#78bbe6;
     font-weight: bold;
+    margin-left: 20px;
 }
 
 ul.leftPanel li a:hover {
@@ -248,6 +224,7 @@ ol li
 
 a {
     text-decoration: none;
+    color: #A6DFF5;
 }
 
 .button {
